lib/src/duckdb_bindings.dart


  duckdb_value duckdb_create_int64(
    int val,
  ) {
    return _duckdb_create_int64(
      val,
    );
  }

  late final _duckdb_create_int64Ptr =
      _lookup<ffi.NativeFunction<duckdb_value Function(ffi.Int64)>>(
          'duckdb_create_int64');
  late final _duckdb_create_int64 =
      _duckdb_create_int64Ptr.asFunction<duckdb_value Function(int)>();

  ffi.Pointer<ffi.Char> duckdb_get_varchar(
    duckdb_value value,
  ) {
    return _duckdb_get_varchar(
      value,
    );
  }

  late final _duckdb_get_varcharPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(duckdb_value)>>(
          'duckdb_get_varchar');
  late final _duckdb_get_varchar = _duckdb_get_varcharPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(duckdb_value)>();

  int duckdb_get_int64(
    duckdb_value value,
  ) {
    return _duckdb_get_int64(
      value,
    );
  }

  late final _duckdb_get_int64Ptr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(duckdb_value)>>(
          'duckdb_get_int64');
  late final _duckdb_get_int64 =
      _duckdb_get_int64Ptr.asFunction<int Function(duckdb_value)>();

  duckdb_logical_type duckdb_create_logical_type(
    int type,
  ) {
    return _duckdb_create_logical_type(
      type,
    );
  }

  late final _duckdb_create_logical_typePtr =
      _lookup<ffi.NativeFunction<duckdb_logical_type Function(ffi.Int32)>>(
          'duckdb_create_logical_type');
  late final _duckdb_create_logical_type = _duckdb_create_logical_typePtr
      .asFunction<duckdb_logical_type Function(int)>();

  duckdb_logical_type duckdb_create_list_type(
    duckdb_logical_type type,
  ) {
    return _duckdb_create_list_type(
      type,
    );
  }

  late final _duckdb_create_list_typePtr = _lookup<
      ffi.NativeFunction<
          duckdb_logical_type Function(
              duckdb_logical_type)>>('duckdb_create_list_type');
  late final _duckdb_create_list_type = _duckdb_create_list_typePtr
      .asFunction<duckdb_logical_type Function(duckdb_logical_type)>();

  duckdb_logical_type duckdb_create_map_type(
    duckdb_logical_type key_type,
    duckdb_logical_type value_type,
  ) {
    return _duckdb_create_map_type(
      key_type,
      value_type,
    );
  }

  late final _duckdb_create_map_typePtr = _lookup<
      ffi.NativeFunction<
          duckdb_logical_type Function(duckdb_logical_type,
              duckdb_logical_type)>>('duckdb_create_map_type');
  late final _duckdb_create_map_type = _duckdb_create_map_typePtr.asFunction<
      duckdb_logical_type Function(duckdb_logical_type, duckdb_logical_type)>();

  duckdb_logical_type duckdb_create_decimal_type(
    int width,
    int scale,
  ) {
    return _duckdb_create_decimal_type(
      width,
      scale,
    );
  }

  late final _duckdb_create_decimal_typePtr = _lookup<
      ffi.NativeFunction<
          duckdb_logical_type Function(
              ffi.Uint8, ffi.Uint8)>>('duckdb_create_decimal_type');
  late final _duckdb_create_decimal_type = _duckdb_create_decimal_typePtr
      .asFunction<duckdb_logical_type Function(int, int)>();

  int duckdb_get_type_id(
    duckdb_logical_type type,
  ) {
    return _duckdb_get_type_id(
      type,
    );
  }

  late final _duckdb_get_type_idPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(duckdb_logical_type)>>(
          'duckdb_get_type_id');
  late final _duckdb_get_type_id =
      _duckdb_get_type_idPtr.asFunction<int Function(duckdb_logical_type)>();

  int duckdb_decimal_width(
    duckdb_logical_type type,
  ) {
    return _duckdb_decimal_width(
      type,
    );
  }

  late final _duckdb_decimal_widthPtr =
      _lookup<ffi.NativeFunction<ffi.Uint8 Function(duckdb_logical_type)>>(
          'duckdb_decimal_width');
  late final _duckdb_decimal_width =
      _duckdb_decimal_widthPtr.asFunction<int Function(duckdb_logical_type)>();

  int duckdb_decimal_scale(
    duckdb_logical_type type,
  ) {
    return _duckdb_decimal_scale(
      type,
    );
  }

  late final _duckdb_decimal_scalePtr =
      _lookup<ffi.NativeFunction<ffi.Uint8 Function(duckdb_logical_type)>>(
          'duckdb_decimal_scale');
  late final _duckdb_decimal_scale =
      _duckdb_decimal_scalePtr.asFunction<int Function(duckdb_logical_type)>();

  int duckdb_decimal_internal_type(
    duckdb_logical_type type,
  ) {
    return _duckdb_decimal_internal_type(
      type,
    );
  }

  late final _duckdb_decimal_internal_typePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(duckdb_logical_type)>>(
          'duckdb_decimal_internal_type');
  late final _duckdb_decimal_internal_type = _duckdb_decimal_internal_typePtr
      .asFunction<int Function(duckdb_logical_type)>();

  int duckdb_enum_internal_type(
    duckdb_logical_type type,
  ) {
    return _duckdb_enum_internal_type(
      type,
    );
  }

  late final _duckdb_enum_internal_typePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(duckdb_logical_type)>>(
          'duckdb_enum_internal_type');
  late final _duckdb_enum_internal_type = _duckdb_enum_internal_typePtr
      .asFunction<int Function(duckdb_logical_type)>();

  int duckdb_enum_dictionary_size(
    duckdb_logical_type type,
  ) {
    return _duckdb_enum_dictionary_size(
      type,
    );
  }

  late final _duckdb_enum_dictionary_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(duckdb_logical_type)>>(
          'duckdb_enum_dictionary_size');
  late final _duckdb_enum_dictionary_size = _duckdb_enum_dictionary_sizePtr
      .asFunction<int Function(duckdb_logical_type)>();

  ffi.Pointer<ffi.Char> duckdb_enum_dictionary_value(
    duckdb_logical_type type,
    int index,
  ) {
    return _duckdb_enum_dictionary_value(
      type,
      index,
    );
  }

  late final _duckdb_enum_dictionary_valuePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              duckdb_logical_type, idx_t)>>('duckdb_enum_dictionary_value');
  late final _duckdb_enum_dictionary_value = _duckdb_enum_dictionary_valuePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(duckdb_logical_type, int)>();

  duckdb_logical_type duckdb_list_type_child_type(
    duckdb_logical_type type,
  ) {
    return _duckdb_list_type_child_type(
      type,
    );
  }

  late final _duckdb_list_type_child_typePtr = _lookup<
      ffi.NativeFunction<
          duckdb_logical_type Function(
              duckdb_logical_type)>>('duckdb_list_type_child_type');
  late final _duckdb_list_type_child_type = _duckdb_list_type_child_typePtr
      .asFunction<duckdb_logical_type Function(duckdb_logical_type)>();

  duckdb_logical_type duckdb_map_type_key_type(
    duckdb_logical_type type,
  ) {
    return _duckdb_map_type_key_type(
      type,
    );
  }

  late final _duckdb_map_type_key_typePtr = _lookup<
      ffi.NativeFunction<
          duckdb_logical_type Function(
              duckdb_logical_type)>>('duckdb_map_type_key_type');
  late final _duckdb_map_type_key_type = _duckdb_map_type_key_typePtr
      .asFunction<duckdb_logical_type Function(duckdb_logical_type)>();

  duckdb_logical_type duckdb_map_type_value_type(
    duckdb_logical_type type,
  ) {
    return _duckdb_map_type_value_type(
      type,
    );
  }

  late final _duckdb_map_type_value_typePtr = _lookup<
      ffi.NativeFunction<
          duckdb_logical_type Function(
              duckdb_logical_type)>>('duckdb_map_type_value_type');
  late final _duckdb_map_type_value_type = _duckdb_map_type_value_typePtr
      .asFunction<duckdb_logical_type Function(duckdb_logical_type)>();

  int duckdb_struct_type_child_count(
    duckdb_logical_type type,
  ) {
    return _duckdb_struct_type_child_count(
      type,
    );
  }

  late final _duckdb_struct_type_child_countPtr =
      _lookup<ffi.NativeFunction<idx_t Function(duckdb_logical_type)>>(
          'duckdb_struct_type_child_count');
  late final _duckdb_struct_type_child_count =
      _duckdb_struct_type_child_countPtr
          .asFunction<int Function(duckdb_logical_type)>();

  ffi.Pointer<ffi.Char> duckdb_struct_type_child_name(
    duckdb_logical_type type,
    int index,
  ) {
    return _duckdb_struct_type_child_name(
      type,
      index,
    );
  }

  late final _duckdb_struct_type_child_namePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              duckdb_logical_type, idx_t)>>('duckdb_struct_type_child_name');
  late final _duckdb_struct_type_child_name = _duckdb_struct_type_child_namePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(duckdb_logical_type, int)>();

  duckdb_logical_type duckdb_struct_type_child_type(
    duckdb_logical_type type,
    int index,
  ) {
    return _duckdb_struct_type_child_type(
      type,
      index,
    );
  }

  late final _duckdb_struct_type_child_typePtr = _lookup<
      ffi.NativeFunction<
          duckdb_logical_type Function(
              duckdb_logical_type, idx_t)>>('duckdb_struct_type_child_type');
  late final _duckdb_struct_type_child_type = _duckdb_struct_type_child_typePtr
      .asFunction<duckdb_logical_type Function(duckdb_logical_type, int)>();

  void duckdb_destroy_logical_type(
    ffi.Pointer<duckdb_logical_type> type,
  ) {
    return _duckdb_destroy_logical_type(
      type,
    );
  }

  late final _duckdb_destroy_logical_typePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<duckdb_logical_type>)>>(
      'duckdb_destroy_logical_type');
  late final _duckdb_destroy_logical_type = _duckdb_destroy_logical_typePtr
      .asFunction<void Function(ffi.Pointer<duckdb_logical_type>)>();

  duckdb_data_chunk duckdb_create_data_chunk(
    ffi.Pointer<duckdb_logical_type> types,
    int column_count,
  ) {
    return _duckdb_create_data_chunk(
      types,
      column_count,
    );
  }

  late final _duckdb_create_data_chunkPtr = _lookup<
      ffi.NativeFunction<
          duckdb_data_chunk Function(ffi.Pointer<duckdb_logical_type>,
              idx_t)>>('duckdb_create_data_chunk');
  late final _duckdb_create_data_chunk =
      _duckdb_create_data_chunkPtr.asFunction<
          duckdb_data_chunk Function(ffi.Pointer<duckdb_logical_type>, int)>();

  void duckdb_destroy_data_chunk(
    ffi.Pointer<duckdb_data_chunk> chunk,
  ) {
    return _duckdb_destroy_data_chunk(
      chunk,
    );
  }

  late final _duckdb_destroy_data_chunkPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<duckdb_data_chunk>)>>('duckdb_destroy_data_chunk');
  late final _duckdb_destroy_data_chunk = _duckdb_destroy_data_chunkPtr
      .asFunction<void Function(ffi.Pointer<duckdb_data_chunk>)>();

  void duckdb_data_chunk_reset(
    duckdb_data_chunk chunk,
  ) {
    return _duckdb_data_chunk_reset(
      chunk,
    );
  }

  late final _duckdb_data_chunk_resetPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(duckdb_data_chunk)>>(
          'duckdb_data_chunk_reset');
  late final _duckdb_data_chunk_reset = _duckdb_data_chunk_resetPtr
      .asFunction<void Function(duckdb_data_chunk)>();

  int duckdb_data_chunk_get_column_count(
    duckdb_data_chunk chunk,
  ) {
    return _duckdb_data_chunk_get_column_count(
      chunk,
    );
  }

  late final _duckdb_data_chunk_get_column_countPtr =
      _lookup<ffi.NativeFunction<idx_t Function(duckdb_data_chunk)>>(
          'duckdb_data_chunk_get_column_count');
  late final _duckdb_data_chunk_get_column_count =
      _duckdb_data_chunk_get_column_countPtr
          .asFunction<int Function(duckdb_data_chunk)>();

  duckdb_vector duckdb_data_chunk_get_vector(
    duckdb_data_chunk chunk,
    int col_idx,
  ) {
    return _duckdb_data_chunk_get_vector(
      chunk,
      col_idx,
    );
  }
